# cx-coach

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  demo_scripts.md  docker-compose.yml  kpi-sheet.md  prompts_used.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: architect.md  code-reviewer.md
.claude/rules/: agents.md
.claude/skills/langgraph-rag-patterns/: SKILL.md
app/: __init__.py  main.py
app/application/: __init__.py  analysis_service.py  conversation_service.py  faq_service.py
app/core/: __init__.py  config.py
app/domain/: __init__.py  agent.py  analysis.py  conversation.py  faq.py  parsing.py
app/infrastructure/: __init__.py
app/interfaces/: __init__.py
docs/: project-guideline.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260130_000000_init_initial_schema.py  20260130_065116_4e2a78b44f48_explicit_metadata_columns.py  20260130_160313_820ecc8dbcb5_add_content_to_faq_documents.py  20260201_102405_6163adea5b37_update_rubric_schema.py  20260201_115734_1e902dfd16e9_add_kpi_fields.py  20260201_135628_322fada435f2_add_is_active_to_faq_document.py  20260201_150000_add_conversations.py
tests/e2e/: conftest.py  test_analysis_flow.py  test_faq_management.py  test_history.py  test_ui_flows.py
tests/unit/: test_analysis_service.py  test_db.py  test_faq_service.py  test_llm_parsing.py  test_models.py  test_stt.py
ui/: Dockerfile  package-lock.json  package.json
ui/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
ui/lib/: api.ts
ui/types/: index.ts
(+41 files in other folders)
