[project]
name = "cx-coach"
version = "0.1.0"
description = "AI 기반 상담 코칭 및 품질 분석 시스템"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "openai>=1.20.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "streamlit>=1.30.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "pydantic-settings>=2.6.0",
    "langchain-postgres>=0.0.12",
    "psycopg2-binary>=2.9.0",
    "psycopg[binary]>=3.1.0",
    "langchain-text-splitters>=1.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pypdf>=6.6.2",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "playwright>=1.57.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.14.14",
    "pytest-cov>=4.1.0",
]
